03/22/2005
----------
1. fix the bug that addressbook entries added with 'quickadd' button
   won't have the X-OWM-CHARSET attribute


03/20/2005
----------
1. remove 'show inbox unread message count' option from prefs
   as it is enabled by default now :)


03/19/2005
----------
1. add 'show inbox unread message count' option to prefs
   (thanks to Alex Teslik, alex.AT.acatysmoof.com for his code)
2. add 'event reminder' option to calendar item menu
   (thanks to Matt Roberts, matt.AT.dworkin.org for his code)


03/18/2005
----------
1. Spanish language file tranlsation minor update
   Spanish holiday file
   (thanks to Miguel Angel Fernandez Roiz, roiz.AT.lobocom.es)
2. new mirrorsite at Burlingame, California, US
   http://openwebmail.tolix.org/
   (thanks to Deep, silver_masta.AT.yahoo.com)


03/17/2005
----------
1. fix a bug that relative links in message would be converted to absolute
   openwebmail links in forwarded message
   (reported by Grund Helmut RZ, Helmut.Grund.AT.fh-furtwangen.de)
2. fix a bug that messages with self id in references header won't be
   displayed in message list when the list is soirted by subject
   (reported by Cruzio Research, research.AT.cruzio.com)
3. new auth module: auth_mysql_postnuke.pl
   It is based on auth_mysql.pl and to be used with users in postnuke.
   (thanks to Didier MICHAUT, dmichaut.AT.mt71.fr for his modification)


03/15/2005
----------
1. new mirror site at Raleigh, NC
   http://owm.opensourcerules.net/
   (thanks to Sam Gates, sam.AT.opensourcerules.net)
2. fix a bug that some words would inproperly changed to %%WORDnn%%
   after spelling check
   (reported by to Thomas Chung, tchung.AT.openwebmail.org)


03/11/2005
----------
1. fix the bug that default sort for new user was not properly set
   to 'date_rev'
2. Korean language file translation minor update
   (thanks to Sungjun Park, psj.AT.soosan.co.kr)
3. Danish language, templates and htmlarea files translation update