@@ -17,7 +17,7 @@
 
 name			Open WebMail
 version			2.51
-releasedate		20050322
+releasedate		20050323
 
 ##############################################################################
 # host dependent configuration
