@@ -1,3 +1,10 @@
+03/23/2005
+----------
+1. fix a bug in preload.pl that some cgi url were hard coded instead of
+   $cgiurl variable
+   (thanks to Joao S Veiga, openwebmail.AT.rf.com.br for his fix)
+
+
 03/22/2005
 ----------
 1. fix the bug that addressbook entries added with 'quickadd' button
